syntax = "proto3";

package datapace;
option go_package = "github.com/datapace/datapace/proto/transactions";

import "google/protobuf/empty.proto";
import "proto/common.proto";

service TransactionsService {
    rpc CreateUser(ID) returns (google.protobuf.Empty) {}
    rpc Transfer(TransferData) returns (google.protobuf.Empty) {}
}

message TransferData {
    string streamID = 1;
    string from  = 2;
    string to = 3;
    uint64 value = 4;
    string dateTime = 5;
}
